<resources>
    <string name="app_name">Maskbook</string>
    <string name="floating_label_user">User</string>
    <string name="floating_label_password">Password</string>
    <string name="floating_label_nickname">Nickname</string>
    <string name="floating_label_repassword">Please enter password again</string>
    <string name="floating_label_content">Say something?</string>
    <string name="button_login">Sign in</string>
    <string name="button_signup">Sign up</string>
    <string name="text_donot_have_a_account">No account yet? </string>
    <string name="text_already_have_a_account">Already had an account? </string>
    <string name="menuitem_profile">My Page</string>
    <string name="menuitem_logout">Logout</string>
    <string name="menuitem_unlock">Purchased</string>
    <string name="menuitem_about">About</string>
    <string name="menuitem_likes">Likes</string>
    <string name="toolbar_publish">Post</string>
    <string name="seekbar_hint">Blur Level</string>
    <string name="price_hint">Price</string>
    <string name="toast_network_error">Network Error</string>
    <string name="toast_unknown_error">Unknown Error</string>
    <string name="toast_empty_username">Username shall not be empty</string>
    <string name="toast_empty_password">Password shall not be empty</string>
    <string name="toast_incorrect_login">Username or password is incorrect</string>
    <string name="toast_no_empty_field">Some filed(s) is not completed</string>
    <string name="toast_different_repassword">The repeated password differs from the first one</string>
    <string name="toast_invalid_username">Length of username must be between 6 and 20 characters</string>
    <string name="toast_invalid_nickname">Length of nickname must be between 2 and 20 characters</string>
    <string name="toast_invalid_password">Length of password must be between 2 and 20 characters</string>
    <string name="toast_duplicate_nickname">Duplicate nickname</string>
    <string name="toast_duplicate_username">Duplicate username</string>
    <string name="toast_no_avatar">No avatar selected</string>
    <string name="toast_signup_success">Sign up succeeded</string>
    <string name="toast_invalid_price">Price must be between 0 and 100 "click"</string>
    <string name="toast_missing_image">Please select an image to post</string>
    <string name="toast_post_success">Post succeeded</string>
    <string name="post_date">Posted at: %s</string>
    <string name="unlock">Unlock</string>
    <string name="power_cost_hint">Powers cost:</string>
    <string name="click_time_hint">Clicks Left:</string>
    <string name="power">Power: %d</string>
    <string name="homepage_header">%s\'s Page</string>
    <string name="post">POST</string>
</resources>
