<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.zyuco.maskbook.MainActivity">

        <ImageView
            android:src="@mipmap/ic_logo_round"
            android:layout_width="130dp"
            android:layout_height="130dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/username"
            />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:hint="@string/floating_label_user"
            android:singleLine="true"
            app:layout_constraintBottom_toTopOf="@id/password"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:met_clearButton="true"
            app:met_floatingLabel="normal"
            app:met_floatingLabelText="@string/floating_label_user"
            app:met_floatingLabelTextSize="16sp"
            app:met_iconLeft="@mipmap/ic_perm_identity_black_24dp" />

        <com.rengwuxian.materialedittext.MaterialEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:hint="@string/floating_label_password"
            android:inputType="textPassword"
            android:singleLine="true"
            app:layout_constraintBottom_toTopOf="@id/login"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:met_clearButton="true"
            app:met_floatingLabel="normal"
            app:met_floatingLabelText="@string/floating_label_password"
            app:met_floatingLabelTextSize="16sp"
            app:met_iconLeft="@mipmap/ic_lock_black_24dp" />

        <Button
            android:id="@+id/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:text="@string/button_login"
            android:theme="@style/AppTheme.Button"
            app:layout_constraintBottom_toTopOf="@id/signup"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <TextView
            android:id="@+id/text_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_donot_have_a_account"
            app:layout_constraintBottom_toBottomOf="@+id/signup"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/signup"
            app:layout_constraintTop_toTopOf="@+id/signup" />


        <Button
            android:id="@+id/signup"
            style="@style/Base.Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="60dp"
            android:text="@string/button_signup"
            android:theme="@style/AppTheme.flatButton"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/text_signup"
            app:layout_constraintRight_toRightOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <include layout="@layout/loading_mask" />
</FrameLayout>
