<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context="com.zyuco.maskbook.PublishActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/blurred_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="#fbfbfb"
        android:paddingVertical="10dp"
        app:layout_constraintBottom_toTopOf="@id/seekbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <ImageView
            android:id="@+id/image_preview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:scaleX="1.1"
            android:scaleY="1.1"/>
    </FrameLayout>

    <ImageView
        android:id="@+id/imagepick"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:src="@drawable/add"
        app:layout_constraintBottom_toBottomOf="@id/blurred_view"
        app:layout_constraintLeft_toLeftOf="@id/blurred_view"
        app:layout_constraintRight_toRightOf="@id/blurred_view"
        app:layout_constraintTop_toTopOf="@id/blurred_view"/>

    <com.fivehundredpx.android.blur.BlurringView
        android:id="@+id/blurring_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="0dp"
        android:visibility="gone"
        app:blurRadius="1"
        app:downsampleFactor="4"
        app:layout_constraintBottom_toBottomOf="@id/blurred_view"
        app:layout_constraintLeft_toLeftOf="@id/blurred_view"
        app:layout_constraintRight_toRightOf="@id/blurred_view"
        app:layout_constraintTop_toTopOf="@id/blurred_view"
        app:overlayColor="#00FFFFFF"/>

    <TextView
        android:id="@+id/seekbar_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/seekbar_hint"
        app:layout_constraintBottom_toBottomOf="@+id/seekbar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/seekbar"
        app:layout_constraintTop_toTopOf="@+id/seekbar"
        />

    <android.support.v7.widget.AppCompatSeekBar
        android:id="@+id/seekbar"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="40dp"
        app:layout_constraintBottom_toTopOf="@id/content"
        app:layout_constraintLeft_toRightOf="@id/seekbar_hint"
        app:layout_constraintRight_toLeftOf="@id/price"
        app:layout_constraintTop_toBottomOf="@id/blurred_view"/>

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/price"
        android:layout_width="40dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:maxLength="3"
        android:hint="@string/price_hint"
        app:layout_constraintTop_toTopOf="@id/seekbar"
        app:layout_constraintBottom_toBottomOf="@id/seekbar"
        app:layout_constraintLeft_toRightOf="@id/seekbar"
        app:layout_constraintRight_toRightOf="parent"
        app:met_floatingLabel="normal"
        app:met_floatingLabelText="@string/price_hint"
        app:met_floatingLabelTextSize="16sp"
        />

    <com.rengwuxian.materialedittext.MaterialEditText
        android:id="@+id/content"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="40dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:gravity="start"
        android:hint="@string/floating_label_content"
        android:lines="2"
        app:layout_constraintBottom_toTopOf="@+id/publish"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/seekbar"
        app:met_clearButton="true"
        app:met_floatingLabel="normal"
        app:met_floatingLabelText="@string/floating_label_content"
        app:met_floatingLabelTextSize="16sp"/>

    <br.com.simplepass.loading_button_lib.customViews.CircularProgressButton
        android:id="@+id/publish"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/button_shape_default_rounded"
        android:text="@string/post"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/content"
        app:finalCornerAngle="50dp"
        app:initialCornerAngle="50dp"
        app:spinning_bar_color="@android:color/white"
        app:spinning_bar_padding="8dp"
        app:spinning_bar_width="4dp"/>
</android.support.constraint.ConstraintLayout>
