<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorTextWhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:id="@+id/session1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        >
        <com.gcssloop.widget.RCRelativeLayout
            android:id="@+id/avatar"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginLeft="10dp"
            app:round_as_circle="true">
            <ImageView
                android:scaleType="centerCrop"
                android:src="@drawable/bg"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </com.gcssloop.widget.RCRelativeLayout>
    
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="xxxxx"
            android:layout_marginLeft="10dp"
            android:textColor="#000"
            android:textSize="20sp" />
    </LinearLayout>


    <TextView
        android:id="@+id/divider1"
        android:background="@color/colorDrawerDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/session1"/>

    <LinearLayout
        android:id="@+id/homepage"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingLeft="10dp"
        android:gravity="center_vertical"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@id/divider1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:src="@mipmap/ic_perm_identity_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/menuitem_profile"
            android:gravity="center"
            android:textColor="#000"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/purchase_history"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:paddingLeft="10dp"
        android:gravity="center_vertical"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@id/homepage"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageView
            android:src="@mipmap/ic_visibility_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/menuitem_unlock"
            android:gravity="center"
            android:textColor="#000"
            android:textSize="18sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/divider2"
        android:background="@color/colorDrawerDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@id/logout" />

    <LinearLayout
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:paddingLeft="10dp"
        android:gravity="center_vertical"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintBottom_toTopOf="@id/logout">

        <ImageView
            android:src="@mipmap/ic_exit_to_app_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/menuitem_about"
            android:gravity="center"
            android:textColor="#000"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="20dp"
        android:paddingLeft="10dp"
        android:gravity="center_vertical"
        android:clickable="true"
        android:focusable="true"
        android:background="?attr/selectableItemBackground"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:src="@mipmap/ic_exit_to_app_black_24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <TextView
            android:layout_marginLeft="15dp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/menuitem_logout"
            android:gravity="center"
            android:textColor="#000"
            android:textSize="18sp" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>